favico, logo height

--- a/style.sass
+++ b/style.sass
@@ -32,6 +32,17 @@ h1, h2, h3
   strong, b
     font-family: $gotham-bold
 
+p
+  font-size: 1rem
+  font-family: $gotham-book
+
+  em, i
+    font-family: $gotham-book-it
+
+  strong, b
+    font-family: $gotham-bold
+  
+
 h1.entry-title
   font-size: 1.85rem
   display: block
