--- a/style.css
+++ b/style.css
@@ -317,6 +317,20 @@ h1 strong, h1 b, h2 strong, h2 b, h3 strong, h3 b {
 }
 
 /* line 35, style.sass */
+p {
+  font-size: 1rem;
+  font-family: "GothamBook", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+}
+/* line 39, style.sass */
+p em, p i {
+  font-family: "GothamBookItalic", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+}
+/* line 42, style.sass */
+p strong, p b {
+  font-family: "GothamBold", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+}
+
+/* line 46, style.sass */
 h1.entry-title {
   font-size: 1.85rem;
   display: block;
@@ -326,24 +340,24 @@ h1.entry-title {
   letter-spacing: -1px;
 }
 
-/* line 43, style.sass */
+/* line 54, style.sass */
 p {
   font-size: 1rem;
 }
 
-/* line 46, style.sass */
+/* line 57, style.sass */
 #branding {
   display: none;
 }
 
-/* line 49, style.sass */
+/* line 60, style.sass */
 .restrict {
   max-width: 850px;
   width: 100%;
   margin: auto auto;
 }
 
-/* line 54, style.sass */
+/* line 65, style.sass */
 header#header {
   -moz-box-shadow: inset 0px -10px 0px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: inset 0px -10px 0px rgba(0, 0, 0, 0.2);
@@ -354,47 +368,47 @@ header#header {
   width: 100%;
   height: 240px;
 }
-/* line 62, style.sass */
+/* line 73, style.sass */
 header#header .serving {
   float: right;
   margin-top: -10px;
   color: #3c4449;
 }
 
-/* line 67, style.sass */
+/* line 78, style.sass */
 aside#sidebar {
   margin-top: 35px;
   width: 200px;
   position: absolute;
 }
 
-/* line 72, style.sass */
+/* line 83, style.sass */
 section#content {
   margin-top: -18px;
   padding-left: 200px;
 }
-/* line 76, style.sass */
+/* line 87, style.sass */
 section#content section.entry-content {
   padding: 10px 25px;
   padding-right: 20%;
 }
-/* line 80, style.sass */
+/* line 91, style.sass */
 section#content section.entry-content h2 {
   color: #62a01a;
 }
 
-/* line 83, style.sass */
+/* line 94, style.sass */
 ul#menu-main {
   margin: 0px;
   padding: 0px;
 }
-/* line 87, style.sass */
+/* line 98, style.sass */
 ul#menu-main li {
   list-style: none;
   padding: 8px;
   position: relative;
 }
-/* line 92, style.sass */
+/* line 103, style.sass */
 ul#menu-main li.current-menu-item:before {
   content: "";
   height: 10px;
@@ -404,17 +418,17 @@ ul#menu-main li.current-menu-item:before {
   left: -10px;
   top: 11px;
 }
-/* line 102, style.sass */
+/* line 113, style.sass */
 ul#menu-main li:last-child.current-menu-item:before {
   background: #0D5492;
 }
-/* line 105, style.sass */
+/* line 116, style.sass */
 ul#menu-main li:last-child a {
   color: #0D5492;
   padding-left: 26px;
   position: relative;
 }
-/* line 111, style.sass */
+/* line 122, style.sass */
 ul#menu-main li:last-child a:before {
   content: "";
   width: 21px;
@@ -425,7 +439,7 @@ ul#menu-main li:last-child a:before {
   left: 0px;
   top: -3px;
 }
-/* line 121, style.sass */
+/* line 132, style.sass */
 ul#menu-main li a {
   font-family: "GothamBold", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   text-decoration: none;
@@ -433,12 +447,12 @@ ul#menu-main li a {
   font-size: 0.9rem;
 }
 
-/* line 127, style.sass */
+/* line 138, style.sass */
 .widget-container {
   list-style: none;
 }
 
-/* line 130, style.sass */
+/* line 141, style.sass */
 footer {
   margin-top: 70px;
   border-top: 1px solid #ccc;
@@ -448,21 +462,21 @@ footer {
   margin-right: 80px;
 }
 
-/* line 138, style.sass */
+/* line 149, style.sass */
 img.alignleft {
   float: left;
   padding-right: 15px;
   padding-bottom: 15px;
 }
 
-/* line 143, style.sass */
+/* line 154, style.sass */
 a.contact-link {
   position: relative;
   padding-left: 28px;
   text-decoration: none;
 }
 
-/* line 148, style.sass */
+/* line 159, style.sass */
 a.contact-link:before {
   content: "";
   width: 21px;
